# helios-alpha

./: .gitignore  DATA_SOURCES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: assets.yaml  instruments.yaml  thresholds.yaml
config/markets/: xnys.yaml
docs/: EVENT_SHOCK_ARCHITECTURE.md  EVENT_SHOCK_BENCHMARKS.md  EXECUTION_AND_SIGNALS.md  HELIO_RUST_WORKSPACE.md  HELIO_SCAN.md  INSTRUMENTS.md  MARKET_DATA_PROVIDERS.md  PENDULUM_AND_PANDAS.md  PUBLIC_API_SURFACE.md  TIME_AND_WINDOWS.md  TRADING_CALENDAR.md
notebooks/: 01_data_audit.ipynb  02_event_study.ipynb  03_signal_design.ipynb  04_strategy_eval.ipynb
reports/: false_positives.md  initial_findings.md  what_failed.md
rust/: Cargo.toml  README.md
rust/crates/helio_backtest/: Cargo.toml
rust/crates/helio_backtest/src/: clock.rs  error.rs  fingerprint.rs  harness.rs  kalman.rs  kalman_options.rs  lib.rs  metrics.rs  range.rs
rust/crates/helio_backtest_wasm/: Cargo.toml  README.md  index.html
rust/crates/helio_backtest_wasm/src/: lib.rs
rust/crates/helio_bench/: Cargo.toml  README.md
rust/crates/helio_bench/benches/: checkpoint_cadence.rs  event_shock_vertical.rs  event_study.rs  execution_modes.rs  rolling_windows.rs  scan_kernel.rs  scan_pressure.rs  time_keyed_windows.rs
rust/crates/helio_event/: Cargo.toml
rust/crates/helio_event/src/: event_shock.rs  event_shock_adapter.rs  event_shock_control.rs  event_shock_execution.rs  event_shock_ingest.rs  event_shock_lead.rs  event_shock_metrics.rs  event_shock_replay.rs  event_shock_run_config.rs  event_shock_services.rs  event_shock_strategy.rs  event_shock_vertical.rs  fold.rs  lib.rs  pipeline.rs  replay_event_shock_cli.rs  sampler.rs  selector.rs  types.rs
rust/crates/helio_event/tests/: event_shock_compact_smoke.rs  event_shock_generalization.rs  event_shock_session_and_buffer.rs  event_shock_vertical_determinism.rs  replay_determinism.rs  solar_demo_smoke.rs
rust/crates/helio_scan/: Cargo.toml  README.md
rust/crates/helio_scan/examples/: arrow_pipeline.rs
rust/crates/helio_scan/src/: arrow.rs  arrow_core.rs  batch.rs  batch_opt.rs  combinator.rs  control.rs  emit.rs  execution_tests.rs  flush_batch.rs  focus.rs  kernel_tests.rs  lib.rs  macros.rs  persist.rs  runner.rs  runners.rs  scan.rs
rust/crates/helio_time/: Cargo.toml  README.md
rust/crates/helio_time/src/: anchor.rs  availability.rs  bounds.rs  bucket.rs  business_time_clock.rs  calendar.rs  frequency.rs  gate.rs  half_open.rs  layered_schedule.rs  lib.rs  session_telescope.rs  typed_freq.rs  wall_bucket.rs  window_spec.rs
rust/crates/helio_window/: Cargo.toml  README.md
rust/crates/helio_window/src/: agg.rs  buffer.rs  dedup.rs  event_cluster.rs  forward_horizon.rs  join_latest.rs  lag.rs  lib.rs  rolling.rs  rolling_time_keyed.rs  session_keyed.rs  session_window.rs  signal_pipeline.rs  time_keyed.rs  watermark.rs  window_state.rs
rust/crates/helio_window/tests/: tick_bucket_ema_pipeline.rs
rust/crates/helios_signald/: README.md
rust/fixtures/event_shock/: bars.csv  compact_events.csv  events.csv  replay_config.example.json  weather_events.csv
rust/helio_scan/: README.md
rust/helio_scan/src/: combinator.rs  examples.rs  lib.rs
rust/helios_signald/: Cargo.toml  README.md
rust/helios_signald/.cargo/: config.toml
rust/helios_signald/src/: main.rs
scripts/: helio-backtest-tmux.sh
src/helios_alpha/: __init__.py  cli.py  config.py  main.py  timekeeping.py
src/helios_alpha/backtest/: __init__.py  event_study.py  metrics.py  rules.py
src/helios_alpha/conf/: config.yaml
src/helios_alpha/conf/pipeline/: default.yaml
src/helios_alpha/features/: __init__.py  event_windows.py  solar_shock_index.py
src/helios_alpha/forecasting/: __init__.py  kats_bridge.py  prophet_bridge.py
src/helios_alpha/ingest/: __init__.py  cmes.py  dst_kyoto.py  flares.py  geomagnetic.py  merge_events.py  omni_dst.py  polygon.py  prices.py  prices_pandas.py  protons.py
src/helios_alpha/instruments/: __init__.py  registry.py
src/helios_alpha/markets/: __init__.py  trading_calendar.py
src/helios_alpha/models/: __init__.py  logit_risk_model.py  xgb_regime_model.py
src/helios_alpha/signals/: __init__.py  publisher.py  schema.py
src/helios_alpha/utils/: http.py  plotting.py  stats.py  time.py
tests/: test_dst_kyoto_parse.py  test_event_study_config.py  test_instruments_registry.py  test_integration_pulls.py  test_no_wall_clock_in_library.py  test_polygon_ingest.py  test_signals_schema.py  test_timekeeping.py  test_trading_calendar.py
