[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helios-alpha"
version = "0.1.0"
description = "Research lab: space weather as a tradable risk factor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=15.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "yfinance>=0.2.40",
]

[project.scripts]
helios-pipeline = "helios_alpha.cli:main"

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/helios_alpha"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
