[workspace]
resolver = "2"
members = [
    "crates/helio_scan",
    "crates/helio_time",
    "crates/helio_window",
    "crates/helio_event",
    "crates/helio_backtest",
    "crates/helio_backtest_wasm",
    "crates/helio_bench",
    "crates/helios_signald",
]
default-members = [
    "crates/helio_scan",
    "crates/helio_time",
    "crates/helio_window",
    "crates/helio_event",
    "crates/helio_backtest",
]
