[package]
name = "helio_backtest"
version = "0.1.0"
edition = "2021"
description = "Deterministic backtest harness: clock abstraction, pipeline fingerprints, datetime ranges"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"

# Native TUI: ratatui 0.30 aligns unicode-width with ratzilla 0.3 for workspace resolution.
ratatui = { version = "0.30", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", optional = true }

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "helio-backtest-tui"
path = "src/bin/helio_backtest_tui.rs"
required-features = ["tui"]
