[package]
name = "helio_scan"
version = "0.1.0"
edition = "2021"
description = "Composable, flushable, snapshotting scan machines over ordered streams"

[features]
default = []
stream = ["dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
