[package]
name = "helio_time"
version = "0.1.0"
edition = "2021"
description = "Temporal semantics and causality helpers for helio scan pipelines"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
chrono-tz = "0.10"
helio_scan = { path = "../helio_scan" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
